name:                fib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/fib#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           Copyright: (c) 2016 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fib
  build-depends:       base >= 4.7 && < 5
                     , recursion-schemes
  default-language:    Haskell2010

benchmark fib-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Bench.hs
  build-depends:    base
                  , criterion
                  , fib
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -O3
  default-language: Haskell2010

test-suite fib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fib
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/fib
